Report: Fix overflow of long URLs and names
Fixes #117

--- a/website_checker/report/templates/layout.css
+++ b/website_checker/report/templates/layout.css
@@ -357,3 +357,7 @@ figure img {
   background-color: var(--color-fail);
   color: var(--color-fail-light);
 }
+
+.avoid-overflow {
+  overflow-wrap: anywhere;
+}
